Рейтинг в 2-ом приближении

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
 
 <body>
-<div id="Stars">
-<!-- Основная фишка селекторов:
-#Stars input:checked ~ label {
-background-position: 0 -40px; -->
+<!--<div id="Stars">
+Основная фишка селекторов: #Stars input:checked ~ label {
+background-position: 0 -40px; ... }
+
+
     <input id="star-4" type="radio" name="reviewStars"/>
     <label title="gorgeous" for="star-4"></label>
 
@@ -37,14 +38,11 @@ background-position: 0 -40px; -->
 </div>
 
 
-	<div class="productRate">
-		<div style="width: 64%"></div>
+	<div class="Rate">
+		<div class="star" style="width: 100%"></div>
+		<div class="fon"></div>
 	</div>
-
-	<div class="Rate"><!--<img src="./tmp/full-stars.png" alt="None">-->
-		<div style="width: 64%"></div>
-	</div>
-
+-->
 
 	<div class="lft">
 
@@ -129,70 +127,71 @@ background-position: 0 -40px; -->
 	<h2 style="letter-spacing: 0.8px;margin-bottom: 10px;">
 		CREATIVE
 	</h2>
+	<div style="margin-top: 8px;">
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
+	</div>
+	<h2 style="letter-spacing: 0.8px;margin-bottom: 8px;margin-top: 16px;">
+		TEAMWORK
+	</h2>
 	<div style="margin-top: 10px;">
-			<i class="fas fa-arrow-circle-right" style="margin-right: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin-left: 3px;font-size: 18px;"></i>
-		</div>
-		<h2 style="letter-spacing: 0.8px;margin-bottom: 8px;margin-top: 16px;">
-			TEAMWORK
-		</h2>
-		<div style="margin-top: 8px;">
-			<i class="fas fa-arrow-circle-right" style="margin-right: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin-left: 3px;font-size: 18px;"></i>
-		</div>
-		<h2 style="letter-spacing: 0.8px;margin-bottom: 8px;margin-top: 16px;">
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
+	</div>
+		<h2 style="letter-spacing: 0.8px;margin-bottom: 10px;margin-top: 16px;">
 			INNOVATE
 		</h2>
-		<div style="margin-top: 8px;">
-			<i class="fas fa-arrow-circle-right" style="margin-right: 3px;font-size: 18px;margin: 8px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin-left: 3px;font-size: 18px;"></i>
+		<div style="margin-top: 12px;">
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
 		</div>
-		<h2 style="letter-spacing: 0.8px;margin-bottom: 8px;margin-top: 10px;">
+		<h2 style="letter-spacing: 0.8px;
+				margin-bottom: 10px;margin-top: 16px;">
 			COMMUNICATION
 		</h2>
-		<div style="margin-top: 8px;">
-			<i class="fas fa-arrow-circle-right" style="margin-right: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin: 3px;font-size: 18px;"></i>
-			<i class="fas fa-arrow-circle-right" style="margin-left: 3px;font-size: 18px;"></i>
+		<div style="margin-top: 6px;">
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style=""></div>
+		<div class="incircle skill" style="background-color: lightpink;"></div>
 		</div>
 </div>
 </div>
@@ -217,14 +216,15 @@ background-position: 0 -40px; -->
 		</div>
 
 
-		<h3 style="margin-left: 11px;margin-top: 25px;margin-bottom: 8px;
+		<div style="margin-left: 11px;margin-top: 25px;margin-bottom: 8px;
 				font-size: 23px;">
-			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			<div class="incircle skill edu" style=""></div>
+			<!--<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>-->
 			<span style="width: 31%;display: inline-block;margin-left: 18px;
 						font-weight: bold; letter-spacing: 2.5px;">MASTER DEGREE
 			</span>
 			<span style="letter-spacing: 1.5px;">// Feb 2011 - Jun 2014</span>
-		</h3>
+		</div>
 		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
 			UNIVERSITY NAME
 		</h3>
@@ -235,14 +235,14 @@ background-position: 0 -40px; -->
 		ultricies nec, pellentesque.
 		</p>
 
-		<h3 style="margin-left: 11px;margin-top: 15px;margin-bottom: 8px;
+		<div style="margin-left: 11px;margin-top: 15px;margin-bottom: 8px;
 				font-size: 23px;">
-			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			<div class="incircle skill edu" style=""></div>
 			<span style="width: 31%;display: inline-block;margin-left: 18px;
 						font-weight: bold; letter-spacing: 2.5px;">MASTER DEGREE
 			</span>
 			<span style="letter-spacing: 1.5px;">// Feb 2011 - Jun 2014</span>
-		</h3>
+		</div>
 		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
 			UNIVERSITY NAME
 		</h3>
@@ -253,14 +253,14 @@ background-position: 0 -40px; -->
 		ultricies nec, pellentesque.
 		</p>
 
-		<h3 style="margin-left: 11px;margin-top: 15px;margin-bottom: 8px;
+		<div style="margin-left: 11px;margin-top: 15px;margin-bottom: 8px;
 				font-size: 23px;">
-			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			<div class="incircle skill edu" style=""></div>
 			<span style="width: 31%;display: inline-block;margin-left: 18px;
 						font-weight: bold; letter-spacing: 2.5px;">MASTER DEGREE
 			</span>
 			<span style="letter-spacing: 1.5px;">// Feb 2011 - Jun 2014</span>
-		</h3>
+		</div>
 		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
 			UNIVERSITY NAME
 		</h3>
@@ -271,17 +271,14 @@ background-position: 0 -40px; -->
 		ultricies nec, pellentesque.
 		</p>
 
-		<h3 style="margin-left: 11px;margin-top: 15px;margin-bottom: 8px;
+		<div style="margin-left: 11px;margin-top: 15px;margin-bottom: 8px;
 				font-size: 23px;">
-			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			<div class="incircle skill edu" style=""></div>
 			<span style="width: 31%;display: inline-block;margin-left: 18px;
-						font-weight: bold; letter-spacing: 2.5px;">
-				MASTER DEGREE
+						font-weight: bold; letter-spacing: 2.5px;">MASTER DEGREE
 			</span>
-			<span style="letter-spacing: 1.5px;">
-				// Feb 2011 - Jun 2014
-			</span>
-		</h3>
+			<span style="letter-spacing: 1.5px;">// Feb 2011 - Jun 2014</span>
+		</div>
 		<h3 style="margin-left: 50px;margin-top: 5px;letter-spacing: 2px;margin-bottom: 10px;">
 			UNIVERSITY NAME
 		</h3>
@@ -304,7 +301,7 @@ background-position: 0 -40px; -->
 			</div>
 		</div>
 		<h3 style="margin-left: 10px;margin-top: 15px;margin-bottom: 8px;">
-			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			<span class="incircle skill edu" style=""></span>
 			<span style="width: 31%;display: inline-block;margin-left: 18px;
 						font-weight: bold; letter-spacing: 2.5px;">
 				COMPANY NAME
@@ -324,7 +321,7 @@ background-position: 0 -40px; -->
 		</p>
 
 		<h3 style="margin-left: 10px;margin-top: 15px;margin-bottom: 8px;">
-			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			<span class="incircle skill edu" style=""></span>
 			<span style="width: 31%;display: inline-block;margin-left: 18px;
 						font-weight: bold; letter-spacing: 2.5px;">
 				COMPANY NAME
@@ -344,7 +341,7 @@ background-position: 0 -40px; -->
 		</p>
 
 		<h3 style="margin-left: 10px;margin-top: 15px;margin-bottom: 8px;">
-			<i class="fas fa-arrow-circle-right" style="font-size: 20px;"></i>
+			<span class="incircle skill edu" style=""></span>
 			<span style="width: 31%;display: inline-block;margin-left: 18px;
 						font-weight: bold; letter-spacing: 2.5px;">
 				COMPANY NAME
@@ -377,20 +374,38 @@ background-position: 0 -40px; -->
 
 		<div style="float: left;width: 43%;">
 			<h2>PHOTOSHOP</h2>
-			<h2 style="height: 22px;background-color: yellow;width: 90%"></h2>
+			<div style="height: 22px;background-color: green;width: 100%;">
+				<div style="height: 22px;background-color: red;width: 90%;">
+				</div>
+			</div>
 			<h2>ILLUSTRATOR</h2>
-			<h2 style="height: 22px;background-color: yellow;width: 70%"></h2>
+			<div style="height: 22px;background-color: green;width: 100%;">
+				<div style="height: 22px;background-color: red;width: 70%;">
+				</div>
+			</div>
 			<h2>INDESIGN</h2>
-			<h2 style="height: 22px;background-color: yellow;width: 55%"></h2>
+			<div style="height: 22px;background-color: green;width: 100%;">
+				<div style="height: 22px;background-color: red;width: 55%;">
+				</div>
+			</div>
 		</div>
 
 		<div style="float: left;width: 43%;margin-left: 10%;">
 			<h2>DREAMWEAVER</h2>
-			<h2 style="height: 22px;background-color: green;width: 83%;"></h2>
+			<div style="height: 22px;background-color: green;width: 100%;">
+				<div style="height: 22px;background-color: red;width: 83%;">
+				</div>
+			</div>
 			<h2>AFTER EFFECTS</h2>
-			<h2 style="height: 22px;background-color: green;width: 61%;"></h2>
+			<div style="height: 22px;background-color: green;width: 100%;">
+				<div style="height: 22px;background-color: red;width: 61%;">
+				</div>
+			</div>
 			<h2>HTML&CSS3</h2>
-			<h2 style="height: 22px;background-color: green;width: 91%;"></h2>
+			<div style="height: 22px;background-color: green;width: 100%;">
+				<div style="height: 22px;background-color: red;width: 91%;">
+				</div>
+			</div>
 		</div>
 	</div>
 
